--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -2,8 +2,21 @@
     <div class="container mw-lg pt-2">
         <!-- Brand/logo -->
         <a class="navbar-brand text-white ms-2 me-auto" href="/">
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="me-1 bi bi-circle-square" viewBox="0 0 512 512">
-                <path d="M256 0c17.7 0 32 14.3 32 32l0 32 32 0c12.9 0 24.6 7.8 29.6 19.8s2.2 25.7-6.9 34.9l-64 64c-12.5 12.5-32.8 12.5-45.3 0l-64-64c-9.2-9.2-11.9-22.9-6.9-34.9S179.1 64 192 64l32 0 0-32c0-17.7 14.3-32 32-32zM169.4 393.4l64-64c12.5-12.5 32.8-12.5 45.3 0l64 64c9.2 9.2 11.9 22.9 6.9 34.9S332.9 448 320 448l-32 0 0 32c0 17.7-14.3 32-32 32s-32-14.3-32-32l0-32-32 0c-12.9 0-24.6-7.8-29.6-19.8s-2.2-25.7 6.9-34.9zM32 224l32 0 0-32c0-12.9 7.8-24.6 19.8-29.6s25.7-2.2 34.9 6.9l64 64c12.5 12.5 12.5 32.8 0 45.3l-64 64c-9.2 9.2-22.9 11.9-34.9 6.9S64 332.9 64 320l0-32-32 0c-17.7 0-32-14.3-32-32s14.3-32 32-32zm297.4 54.6c-12.5-12.5-12.5-32.8 0-45.3l64-64c9.2-9.2 22.9-11.9 34.9-6.9S448 179.1 448 192l0 32 32 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-32 0 0 32c0 12.9-7.8 24.6-19.8 29.6s-25.7 2.2-34.9-6.9l-64-64zM256 224a32 32 0 1 1 0 64 32 32 0 1 1 0-64z"/>
+            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" class="me-1-old" viewBox="0 0 100 100">
+                <defs>
+                    <linearGradient id="grad-logo" x1="0%" y1="0%" x2="100%" y2="100%">
+                        <stop offset="0%" style="stop-color:#00f0ff;stop-opacity:1"></stop>
+                        <stop offset="100%" style="stop-color:#0055ff;stop-opacity:1"></stop>
+                    </linearGradient>
+                </defs>
+                <!-- 4 inward pointing arrows simplified into a solid X/Star shape -->
+                <path d="M 50 20 L 65 35 L 50 50 L 35 35 Z" fill="url(#grad-logo)"></path>
+                <path d="M 80 50 L 65 65 L 50 50 L 65 35 Z" fill="url(#grad-logo)" opacity="0.8"></path>
+                <path d="M 50 80 L 35 65 L 50 50 L 65 65 Z" fill="url(#grad-logo)" opacity="0.6"></path>
+                <path d="M 20 50 L 35 35 L 50 50 L 35 65 Z" fill="url(#grad-logo)" opacity="0.4"></path>
+                
+                <!-- Center dot emphasis -->
+                <circle cx="50" cy="50" r="4" fill="#fff"></circle>
             </svg>
             <span class="profile-name">{{site.title}}</span>
         </a>
